# rpl

./: README.md
async_await/: Cargo.toml
async_await/src/: main.rs
chapter10_trait/: Cargo.toml
chapter10_trait/src/: main.rs
chapter11_test/: Cargo.toml
chapter11_test/src/: adder.rs  lib.rs  main.rs
chapter11_test/tests/: fns_test.rs
chapter12_io/: Cargo.toml
chapter12_io/src/: lib.rs  main.rs
chapter13_iter/: Cargo.toml
chapter13_iter/src/: main.rs
chapter14_cargo/: Cargo.toml
chapter14_cargo/src/: lib.rs  main.rs
chapter14_ws/: Cargo.toml
chapter14_ws/add-one/: Cargo.toml
chapter14_ws/adder/: Cargo.toml
chapter15_smartpointer/: Cargo.toml
chapter15_smartpointer/src/: main.rs
chapter16/: Cargo.toml
chapter16/src/: main.rs
chapter17/: Cargo.toml
chapter17/src/: lib.rs  main.rs
chapter17_blog/: Cargo.toml
chapter17_blog/src/: lib.rs  main.rs
chapter18/: Cargo.toml
chapter18/src/: main.rs
chapter19/: Cargo.toml
chapter19/hellomacro/: Cargo.toml
chapter19/hellomacro_derive/: Cargo.toml
chapter19/hellomacro_derive/src/: lib.rs
chapter19/src/: lib.rs  main.rs
chapter1_hello/: hello_world  hello_world.rs
chapter20/: Cargo.toml
chapter20/src/: lib.rs  main.rs
chapter2_guess/: Cargo.toml
chapter2_guess/src/: main.rs
chapter3_basic_concept/: main  main.rs
chapter4_ownership/: bnr.rs  main  main.rs  slc.rs
chapter5_struct/: main  main.rs
chapter6_enum/: main  main.rs
chapter7_crate/: Cargo.toml
chapter7_crate/src/: main.rs
chapter8_collection/: Cargo.toml
chapter9_error/: Cargo.toml
(+4 files in other folders)
