[package]
name = "chapter19"
version = "0.1.0"
authors = ["julian0zzx <julian0zzx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hellomacro = { path = "./hellomacro" }
hellomacro_derive = { path = "./hellomacro_derive" }

[profile.release]
debug = true

[workspace]
members = [
    "hellomacro",
    "hellomacro_derive"
]
